maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:45: error: ':' expected but '=' found.
def isDirectionFree(Direction = dir) : Boolean = {
                              ^Escaper:64: error: identifier expected but '}' found.
}
^